Bug 133925 - Scaled image in Calc has row and column lines drawn over it
Summary: Scaled image in Calc has row and column lines drawn over it
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.0.1
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-06-12 11:30 UTC by NISZ LibreOffice Team
Modified: 2020-06-15 13:28 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem in Calc (391.86 KB, image/png)
2020-06-12 11:30 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-06-12 11:30:55 UTC
Created attachment 161913 [details]
Screenshot of the problem in Calc

Opening attachment #156150 [details] from bug #129063 has an image around cell P5 that has extra lines drawn over it when using SKIA and scrolling the document.
Turning off SKIA makes these extra lines disappear.

Steps to reproduce:
    1. Open attachment #156150 [details] and scroll to the image with top left corner is in cell P5, then scroll the sheet horizontally/vertically

Actual results:
Ghost lines appear over the image aligned with row/column borders.

Expected results:
No ghost lines.

LibreOffice details:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: 7f6d7a0eb624d67421cd5af6462ee2a662fdff3a
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 Commit Notification 2020-06-15 08:08:10 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30deee2265e76052c320a0c1f84486c6dd1bebc3

fix skewed drawing in Skia's drawTransformedBitmap() (tdf#133925)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2020-06-15 13:28:22 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/5ca7e7aaf0c441f8602a21c4b4b18085063f674c

fix skewed drawing in Skia's drawTransformedBitmap() (tdf#133925)

It will be available in 7.0.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.