fix skewed drawing in Skia's drawTransformedBitmap() (tdf#133925)

In debug builds this led to an assert with the bugdoc, in optimized
builds it seems to cause drawing problems.

Change-Id: Id52309f2e3d33f8b68952d988b927cea7546d131
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/96206
Tested-by: Jenkins
Reviewed-by: Luboš Luňák <l.lunak@collabora.com>
(cherry picked from commit fe78804b962a11a35b14ad6ec8afdd02ba40034a)